# calybris-core

./: .codecov.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cargo-deny.toml  deny.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
benches/: budget_bench.rs  kernel_bench.rs
docs/: AUDIT_GUIDE.md  MIRI.md  SECURITY_INVARIANTS.md  THREAT_MODEL.md
examples/: finance_hft.rs  hft_pretrade_guard.rs  llm_routing.rs  quickstart.rs  replay_audit.rs  route_decision.rs  simple_kernel.rs  verify_wal.rs
proptest-regressions/: budget.txt
src/: budget.rs  digest.rs  finance.rs  kernel.rs  lib.rs  sync.rs  verify.rs  wal.rs
tests/: audit_pipeline.rs  budget_loom.rs
