[package]
name = "calybris-core"
version = "0.2.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
description = "A Rust decision engine for auditable policy decisions, model routing, tamper-evident logs, and budget accounting"
repository = "https://github.com/emirhuseynrmx/calybris-core"
homepage = "https://emirhuseyin.tech/engine"
documentation = "https://docs.rs/calybris-core"
readme = "README.md"
keywords = ["decision-engine", "proof-carrying", "write-ahead-log", "budget-engine", "deterministic"]
categories = ["algorithms", "finance"]
exclude = ["assets/", ".github/"]

[dependencies]
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "simple_kernel"
path = "examples/simple_kernel.rs"

[[example]]
name = "verify_wal"
path = "examples/verify_wal.rs"

[[example]]
name = "route_decision"
path = "examples/route_decision.rs"

[[bench]]
name = "kernel_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
