[package]
name = "calybris-core"
version = "0.3.4"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "A Rust decision engine for auditable policy decisions, model routing, tamper-evident logs, and budget accounting"
repository = "https://github.com/emirhuseynrmx/calybris-core"
homepage = "https://emirhuseyin.tech/engine"
documentation = "https://docs.rs/calybris-core"
readme = "README.md"
keywords = ["decision-engine", "proof-carrying", "write-ahead-log", "budget-engine", "deterministic"]
categories = ["algorithms", "finance"]
exclude = ["assets/", ".github/"]

[features]
default = ["wal"]
serde = ["dep:serde", "dep:serde_json"]
wal = ["serde", "dep:hmac", "dep:subtle"]

[dependencies]
sha2 = "0.10"
hmac = { version = "0.12", optional = true }
subtle = { version = "2.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
thiserror = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "simple_kernel"
path = "examples/simple_kernel.rs"

[[example]]
name = "verify_wal"
path = "examples/verify_wal.rs"

[[example]]
name = "llm_routing"
path = "examples/llm_routing.rs"

[[example]]
name = "hft_pretrade_guard"
path = "examples/hft_pretrade_guard.rs"

[[example]]
name = "route_decision"
path = "examples/route_decision.rs"

[[example]]
name = "replay_audit"
path = "examples/replay_audit.rs"

[[example]]
name = "finance_hft"
path = "examples/finance_hft.rs"

[[bench]]
name = "kernel_bench"
harness = false

[[bench]]
name = "budget_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
