[package]
name = "calybris-core"
version = "0.3.8"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "A Rust decision engine for auditable policy decisions, model routing, tamper-evident logs, and budget accounting"
repository = "https://github.com/emirhuseynrmx/calybris-core"
homepage = "https://emirhuseyin.tech/engine"
documentation = "https://docs.rs/calybris-core"
readme = "README.md"
keywords = ["decision-engine", "proof-carrying", "write-ahead-log", "budget-engine", "deterministic"]
categories = ["algorithms", "finance"]
exclude = ["assets/", ".github/"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[features]
default = ["wal"]
serde = ["dep:serde", "dep:serde_json"]
wal = ["serde", "dep:hmac", "dep:subtle"]

[dependencies]
sha2 = "0.11"
hmac = { version = "0.13", optional = true }
subtle = { version = "2.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
thiserror = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
loom = { version = "0.7", features = ["checkpoint"] }

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "simple_kernel"
path = "examples/simple_kernel.rs"

[[example]]
name = "verify_wal"
path = "examples/verify_wal.rs"
required-features = ["wal"]

[[example]]
name = "llm_routing"
path = "examples/llm_routing.rs"
required-features = ["wal"]

[[example]]
name = "hft_pretrade_guard"
path = "examples/hft_pretrade_guard.rs"

[[example]]
name = "route_decision"
path = "examples/route_decision.rs"
required-features = ["wal"]

[[example]]
name = "replay_audit"
path = "examples/replay_audit.rs"
required-features = ["wal"]

[[example]]
name = "finance_hft"
path = "examples/finance_hft.rs"

[[bench]]
name = "kernel_bench"
harness = false

[[test]]
name = "audit_pipeline"
path = "tests/audit_pipeline.rs"
required-features = ["wal"]

[[test]]
name = "budget_loom"
path = "tests/budget_loom.rs"

[[bench]]
name = "budget_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
